# exlib

./: CMakeLists.txt
include/exlib/: ex_hashes.h  ex_macros.h  ex_path.h  ex_safestr.h  ex_stdbool.h  ex_stdint.h  ex_strings.h  ex_types.h
src/: CMakeLists.txt
src/exlib/hashes/: crc32.c
src/exlib/path/: base.c  pathlinux.c
src/exlib/strings/: base.c  decstr_from.c  decstr_to.c  hexstr_from.c  hexstr_to.c  safe_base.c  safe_decstr_to.c  safe_dump.c  safe_hexstr_to.c  safe_strbase.c  strbase.c  substrings.c
tests/: CMakeLists.txt  test-decstr_from.c  test-decstr_to.c  test-path.c  test-strlcat.c  test-strlcpy.c
